<resources>
    <string name="app_name">Submission 1  Aplikasi GitHub User</string>
    <string name="username">Username</string>
    <string name="name">Name : </string>
    <string name="tUsername">Username : </string>
    <string name="tname">"Name : "</string>
    <string name="Username">"Username : "</string>
    <string name="Follower">"Follower : "</string>
    <string name="Following">"Following : "</string>
    <string name="Company">"Company : "</string>
    <string name="Location">"Location : "</string>
    <string name="Repository">"Repository : "</string>
    <string name="Detail">Detail</string>

    <string name="github">Github</string>
    <string name="githubUser">Github User</string>
    <string name="detail_user">Detail User</string>
    <string name="detail_user_favourite">Detail User Favourite</string>
    <string name="setting">Settings</string>
    <string name="gambar_github">Gambar Github</string>
    <string name="avatar">Avatar</string>
    <string name="gambar_avatar">Gambar Avatar</string>
    <string name="textview">TextView</string>
    <string name="favourit">Favourite</string>

    <string name="search">Search</string>
    <string name="menu_1">Menu 1</string>
    <string name="menu_2">Menu 2</string>
    <string name="search_hint">Masukkan kata</string>

    <string name="reminder_header">Theme</string>
    <string name="pref_key_notify">key_notification</string>
    <string name="notify_channel_name">Task Reminder</string>
    <string name="pref_notify_name">Dark Mode</string>
    <string name="pref_notify_summary">Change Theme With Dark Mode</string>

    <string name="tab_text_1">Follower</string>
    <string name="tab_text_2">Following</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_follower">No Follower</string>
    <string name="no_following">No Following</string>
    <string name="no_data">No Data</string>
    <string name="settings">Settings</string>
    <string name="favourite">Favourite</string>
    <string name="delete">Delete</string>
    <string name="no_favourite">No Favourite</string>
</resources>