<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container" >
        <item
            android:id="@+id/menu_search"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/search"
            app:actionViewClass="androidx.appcompat.widget.SearchView"
            app:showAsAction="collapseActionView|ifRoom" />

        <item
            android:id="@+id/favourite"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/favourite"
            app:showAsAction="collapseActionView"
            />

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings"
            app:showAsAction="collapseActionView"
            />

    </group>
</menu>