<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_avatar"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="32dp"
                android:contentDescription="@string/avatar"
                tools:src="@drawable/user1"
                tools:text="@tools:sample/avatars" />

            <TextView
                android:id="@+id/username"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:gravity="start"
                android:text="@string/username"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_below="@id/img_avatar"
                />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/username"
                android:gravity="start"
                android:text="@string/name"
                android:textSize="14sp" />

            <Button
                android:id="@+id/tv_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginBottom="36dp"
                android:layout_toEndOf="@id/img_avatar"
                android:text="@string/Detail" />

            <Button
                android:id="@+id/tv_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_detail"
                android:layout_marginStart="150dp"
                android:layout_marginBottom="36dp"
                android:layout_toEndOf="@id/img_avatar"
                android:text="@string/delete" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
