<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.favourite.DetailFavouriteActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="173dp"
            android:layout_height="159dp"
            android:layout_marginStart="107dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="108dp"
            android:contentDescription="@string/gambar_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/user1" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="416dp"
            android:layout_marginEnd="196dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/follower"
            style="@style/TextContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="72dp"
            android:text="@string/Follower"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar" />

        <TextView
            android:id="@+id/username"
            style="@style/TextContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="28dp"
            android:text="@string/Username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar" />

        <TextView
            android:id="@+id/following"
            style="@style/TextContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="116dp"
            android:text="@string/Following"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar" />

        <TextView
            android:id="@+id/company"
            style="@style/TextContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="160dp"
            android:text="@string/Company"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar" />

        <TextView
            android:id="@+id/location"
            style="@style/TextContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="208dp"
            android:text="@string/Location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar" />

        <TextView
            android:id="@+id/repository"
            style="@style/TextContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="260dp"
            android:text="@string/Repository"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar" />

        <TextView
            android:id="@+id/name"
            style="@style/TextContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="320dp"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar" />

        <TextView
            android:id="@+id/vUsername"
            style="@style/TextContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="28dp"
            android:text="@string/textview"
            app:layout_constraintStart_toEndOf="@+id/follower"
            app:layout_constraintTop_toBottomOf="@+id/avatar" />

        <TextView
            android:id="@+id/vFollow"
            style="@style/TextContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="72dp"
            android:text="@string/textview"
            app:layout_constraintStart_toEndOf="@+id/follower"
            app:layout_constraintTop_toBottomOf="@+id/avatar" />

        <TextView
            android:id="@+id/vFollowing"
            style="@style/TextContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="116dp"
            android:text="@string/textview"
            app:layout_constraintStart_toEndOf="@+id/follower"
            app:layout_constraintTop_toBottomOf="@+id/avatar" />

        <TextView
            android:id="@+id/vCompany"
            style="@style/TextContent"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="160dp"
            android:text="@string/textview"
            app:layout_constraintStart_toEndOf="@+id/follower"
            app:layout_constraintTop_toBottomOf="@+id/avatar" />

        <TextView
            android:id="@+id/vLocation"
            style="@style/TextContent"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="208dp"
            android:text="@string/textview"
            app:layout_constraintStart_toEndOf="@+id/follower"
            app:layout_constraintTop_toBottomOf="@+id/avatar" />

        <TextView
            android:id="@+id/vRepository"
            style="@style/TextContent"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="260dp"
            android:text="@string/textview"
            app:layout_constraintStart_toEndOf="@+id/follower"
            app:layout_constraintTop_toBottomOf="@+id/avatar" />

        <TextView
            android:id="@+id/vName"
            style="@style/TextContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="320dp"
            android:text="@string/textview"
            app:layout_constraintStart_toEndOf="@+id/follower"
            app:layout_constraintTop_toBottomOf="@+id/avatar" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/views_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="584dp"
            app:layout_constraintEnd_toEndOf="@id/vName"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/views_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/views_tabs" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>